Probably didnt fix social link overlap

--- a/styles/index.css
+++ b/styles/index.css
@@ -384,6 +384,7 @@ main > div #content {
 
 main.first-inverted > div #content {
   opacity: 0;
+  pointer-events: none;
 }
 
 main > div:has(#home-logo-morse-container.top) #content {
